--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "type-check": "tsc",
     "eslint": "eslint .",
     "analyze": "ANALYZE=true next build",
-    "test": "jest",
-    "generate": "graphql-codegen --require dotenv/config --config codegen.js"
+    "generate": "graphql-codegen --require dotenv/config --config codegen.js",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest --coverage"
   },
   "dependencies": {
     "@apollo/client": "^3.7.0",
@@ -44,9 +46,9 @@
     "@graphql-codegen/typescript-react-apollo": "^3.3.4",
     "@graphql-codegen/typescript-resolvers": "^2.7.4",
     "@svgr/webpack": "^5.5.0",
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.5",
-    "@testing-library/user-event": "^14.1.1",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/axios": "^0.14.0",
     "@types/node": "^14.14.22",
     "@types/react": "^17.0.0",
@@ -56,6 +58,7 @@
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/eslint-plugin-tslint": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
+    "@vitejs/plugin-react": "^3.0.1",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
     "eslint": "^7.18.0",
@@ -66,7 +69,9 @@
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "jest": "^26.6.3",
+    "jsdom": "^21.1.0",
     "prettier": "^2.2.1",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "vitest": "^0.28.3"
   }
 }
