--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@svgr/webpack": "^5.5.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^12.1.2",
+    "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/user-event": "^14.4.3",
     "@types/axios": "^0.14.0",
     "@types/node": "^14.14.22",
@@ -70,8 +71,12 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "jest": "^26.6.3",
     "jsdom": "^21.1.0",
+    "msw": "^1.2.1",
     "prettier": "^2.2.1",
     "typescript": "^4.1.3",
     "vitest": "^0.28.3"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
